--- a/www/views/clients.pug
+++ b/www/views/clients.pug
@@ -13,11 +13,11 @@ html(lang="fr")
 
       main
         div.header__mainContainer
-          section.choix.choix--sympathisant
-            h2.choix__title="Sympathisant"
-            p.choix__subtitle="Vous êtes un sympathisant ou vous avez entendu parlé de nous par hasard et vous voulez en savoir plus sur notre association ou adhérez à notre manifeste, vous êtes au bon endroits"
-          div.choix__image.choix__image--sympathisant
-            p.hidden="Image représentant un homme qui est dans les bras d'une Travailleuse du sexe, plein de tendresse dans cette image"
+          section.choix.choix--clients
+            h2.choix__title="Clients"
+            p.choix__subtitle="Vous êtes un client et vous avez des droits  mais vous avez aussi des obligations et  des précautions à prendre de votre côtés  pour que tout se passe dans le respect de chaqu’un. Vous trouverez ici un petit guide du client pour en apprendre d’avantage."
+          div.choix__image.choix__image--client
+            p.hidden="Image représentant une main qui sort tendu vers ce qu'on imagine être une femme qui sors de sa voiture"
 
 
         div.actuality__container
@@ -27,9 +27,9 @@ html(lang="fr")
                 a.aside__link(href="#poinfort",title="Aller vers les points fort")="Point fort de notre manifeste"
               li.aside__element
                 a.aside__link(href="#legislation",title="Aller vers les points fort")="le point sur notre législation"
-                
+
           section.rapportContent
-            h2.hidden="Texte sur les sympathisant"
+            h2.hidden="Guide du clients"
 
             article.actuality__article#poinfort
               h3.article__title="Titre du paragraphe"
