--- a/www/views/template/_navigation.pug
+++ b/www/views/template/_navigation.pug
@@ -47,11 +47,11 @@ section.navigation#menu
         div.profil__box.profil__box--sympathisant
           ul.profil__list
             li.profil__element.profil__element--sympathisant
-              a.profil__link(href="sympathisant.html")="Points fort de notre manifeste"
+              a.profil__link(href="sympathisant.html#pointfort")="Points fort de notre manifeste"
             li.profil__element.profil__element--sympathisant
               a.profil__link(href="sympathisant.html")="Le point sur notre législation et les autres"
       article.profil.profil--clients
         h3.profil__title="Clients"
         p.profil__text="Vous êtes un client et vous avez des droits mais vous avez aussi des obligations et des précautions à prendre de votre côtés pour que tout se passe dans le respect de chaqu’un. Vous trouverez ici un petit guide du client pour en apprendre d’avantage."
         div.profil__box.profil__box--clients
-          a.profil__button(href="#")="Guide du clients"
+          a.profil__button(href="clients.html")="Guide du clients"
