--- a/www/source/scss/object/_choix.scss
+++ b/www/source/scss/object/_choix.scss
@@ -5,7 +5,6 @@
  * coded by Dylan Schirino
  * started at 08/10/2016
  */
-
 .choix{
   height: 85.2vh;
   float: left;
@@ -18,6 +17,33 @@
   &__subtitle{
     width: 80%;
     margin: 2.9375em auto;
+  }
+}
+.actuality{
+  &__container{
+         position: relative;
+  }
+}
+.aside{
+    float: right;
+    margin-top: 10em;
+  &__link{
+    display: block;
+  }
+}
+
+@media screen and (max-width:1231px) {
+  .aside{
+      float:none;
+      margin-top: 10em;
+  }
+}
+
+@media screen and (max-width:975px) {
+  .aside{
+    width: 90%;
+    margin:auto;
+    margin-top: 5em;
   }
 }
 
