--- a/www/views/rapport.pug
+++ b/www/views/rapport.pug
@@ -43,7 +43,7 @@ html(lang="fr")
               article.actuality__article#paragraphe2
                 h3.article__title="Titre du paragraphe"
                 p.article__text.article__text--rapport="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget scelerisque nisi. Nullam varius dui et hendrerit dignissim. Aliquam vel augue in massa auctor feugiat. Vivamus ullamcorper sollicitudin lacus eget molestie. Aenean eu sem justo. Praesent consectetur, leo in commodo tristique, ex odio iaculis ligula, vel commodo felis dolor imperdiet mi. Praesent a felis blandit lorem tincidunt luctus id eu ante. Aliquam erat volutpat. Vivamus a diam eleifend, sodales libero ut, aliquet enim. In at augue magna. Morbi porta rutrum nulla, quis eleifend urna faucibus nec. Donec id maximus arcu, in sodales nulla. Quisque ornare ipsum ut nisi hendrerit fermentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-          div.button#button
+          div.button#sidebar
             a.button__link(href="#sommaire" title="Retourner au sommaire")="Sommaire"
 
       include template/_footer.pug
