Adding client and student page

--- a/www/source/scss/components/_choix.scss
+++ b/www/source/scss/components/_choix.scss
@@ -16,6 +16,10 @@
      background-color: rgba(117,67,133,0.62);
      float: right;
    }
+   &--etudiant{
+     background-color: $etudiantColor;
+     background-color: rgba(67,129,133,0.62);
+   }
    &__image{
      &--sympathisant{
        background: url("../images/sympathisant.png") no-repeat center center;
@@ -25,6 +29,10 @@
       background: url("../images/client.png") no-repeat center center;
       background-size: cover;
       float: left;
+     }
+     &--etudiant{
+       background: url("../images/etudiant.png") no-repeat center center;
+       background-size: cover;
      }
    }
    &__title{
@@ -60,6 +68,22 @@
      padding:0.7em 0;
      &:hover{
        text-decoration: underline;
+     }
+     &--button{
+       font: 1.2em/2.5 $playfair;
+       text-transform: uppercase;
+       background-color: $black;
+       color: $white;
+       border: 1px solid $white;
+       transition: .2s ease-in;
+       text-align: center;
+       &:hover{
+         border: 1px solid black;
+         background-color: $white;
+         color: $black;
+         cursor: pointer;
+         text-decoration: none;
+       }
      }
    }
  }
