--- a/www/views/template/_navigation.pug
+++ b/www/views/template/_navigation.pug
@@ -32,13 +32,13 @@ section.navigation#menu
         div.profil__box.profil__box--etudiants
           ul.profil__list
             li.profil__element.profil__element--etudiants
-              a.profil__link(href="#")="Nos actions"
+              a.profil__link(href="etudiant.html")="Nos actions"
             li.profil__element.profil__element--etudiants
-              a.profil__link(href="#")="Notre philosophie"
+              a.profil__link(href="etudiant.html")="Notre philosophie"
             li.profil__element.profil__element--etudiants
-              a.profil__link(href="#")="Le point sur notre législation et les autres"
+              a.profil__link(href="etudiant.html")="Le point sur notre législation et les autres"
             li.profil__element.profil__element--etudiants
-              a.profil__link(href="#")="Infos stage et intervention scolaire"
+              a.profil__link(href="etudiant.html")="Infos stage et intervention scolaire"
 
     div.navigation__container--right
       article.profil.profil--sympathisant
