--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -36,6 +36,7 @@
 @import "object/rapport";
 @import "object/country";
 @import "object/choix";
+@import "object/askforus";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -53,3 +54,4 @@
 @import "components/rapport";
 @import "components/country";
 @import "components/choix";
+@import "components/askforus";
