--- a/www/source/scss/object/_askforus.scss
+++ b/www/source/scss/object/_askforus.scss
@@ -5,3 +5,61 @@
  * coded by Dylan Schirino
  * started at 08/10/2016
  */
+
+
+.askforus{
+  &__section{
+    width: 87.5%;
+    margin:auto;
+  }
+  &__label{
+    display: block;
+  }
+  &__form{
+    width: 100%;
+  }
+  fieldset{
+    &::after{
+      content: "";
+      display: block;
+      clear: both;
+    }
+  }
+  &__input{
+    width: 100%;
+    height: 3em;
+    margin-bottom: 2em;
+    &--textarea{
+      height: 20em;
+    }
+  }
+  &__submit{
+    width: 15.625em;
+    height: 3.5em;
+  }
+  &__left{
+    float: left;
+    width: 40%;
+    display: inline-block;
+  }
+  &__right{
+    display: inline-block;
+    float: right;
+    width: 50%;
+    margin-left: 3em;
+  }
+}
+
+@media screen and (max-width:598px) {
+  .askforus{
+    &__section{
+      width: 80%;
+      margin: auto;
+    }
+    &__left,&__right{
+      float: none;
+      width: 100%;
+      margin-left: 0;
+    }
+  }
+}
