Add fixed sidebar( no-responsive

--- a/www/views/sympathisant.pug
+++ b/www/views/sympathisant.pug
@@ -21,13 +21,13 @@ html(lang="fr")
 
 
         div.actuality__container
-          aside.aside#sidebar
+          aside.aside#sticky
             ul.aside__list
               li.aside__element
                 a.aside__link(href="#poinfort",title="Aller vers les points fort")="Point fort de notre manifeste"
               li.aside__element
                 a.aside__link(href="#legislation",title="Aller vers les points fort")="le point sur notre législation"
-                
+
           section.rapportContent
             h2.hidden="Texte sur les sympathisant"
 
