--- a/www/views/tds.pug
+++ b/www/views/tds.pug
@@ -20,8 +20,8 @@ html(lang="fr")
             p.hidden="Image représentant les pieds d'une femme qui porte des chaussures rouge, le sol est représenter par du carrelage"
 
 
-        div.actuality__container
-          aside.aside#sidebar
+        div.actuality__container#container
+          aside.aside#sticky
             ul.aside__list
               li.aside__element
                 a.aside__link(href="#service",title="Aller vers les points fort")="Nos services"
@@ -51,7 +51,9 @@ html(lang="fr")
             article.actuality__article#vaccin
               h3.article__title="Infos vaccination et dépistage"
               p.article__text.article__text--rapport="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget scelerisque nisi. Nullam varius dui et hendrerit dignissim. Aliquam vel augue in massa auctor feugiat. Vivamus ullamcorper sollicitudin lacus eget molestie. Aenean eu sem justo. Praesent consectetur, leo in commodo tristique, ex odio iaculis ligula, vel commodo felis dolor imperdiet mi. Praesent a felis blandit lorem tincidunt luctus id eu ante. Aliquam erat volutpat. Vivamus a diam eleifend, sodales libero ut, aliquet enim. In at augue magna. Morbi porta rutrum nulla, quis eleifend urna faucibus nec. Donec id maximus arcu, in sodales nulla. Quisque ornare ipsum ut nisi hendrerit fermentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-
+            article.actuality__article#vaccin
+              h3.article__title="Infos vaccination et dépistage"
+              p.article__text.article__text--rapport="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget scelerisque nisi. Nullam varius dui et hendrerit dignissim. Aliquam vel augue in massa auctor feugiat. Vivamus ullamcorper sollicitudin lacus eget molestie. Aenean eu sem justo. Praesent consectetur, leo in commodo tristique, ex odio iaculis ligula, vel commodo felis dolor imperdiet mi. Praesent a felis blandit lorem tincidunt luctus id eu ante. Aliquam erat volutpat. Vivamus a diam eleifend, sodales libero ut, aliquet enim. In at augue magna. Morbi porta rutrum nulla, quis eleifend urna faucibus nec. Donec id maximus arcu, in sodales nulla. Quisque ornare ipsum ut nisi hendrerit fermentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 
         div.askforus
           section.askforus__section
