Adding manifeste with responsive

--- a/www/source/scss/main.scss
+++ b/www/source/scss/main.scss
@@ -37,6 +37,7 @@
 @import "object/country";
 @import "object/choix";
 @import "object/askforus";
+@import "object/manifeste";
 
 // 6. Components - Design des composants, morceaux d'UI
 @import "components/header";
@@ -55,3 +56,4 @@
 @import "components/country";
 @import "components/choix";
 @import "components/askforus";
+@import "components/manifeste";
