--- a/www/views/manifeste.pug
+++ b/www/views/manifeste.pug
@@ -87,6 +87,35 @@ html(lang="fr")
                 p.manifeste__text="Nous voulons promouvoir la déstigmatisation des TDS et des clients à travers la mise en place de programmes éducatifs accessibles aux jeunes et aux adultes pour casser les préjugés et combattre les attitudes irrespectueuses."
 
               p.manifeste__citation="Nous ne voulons ni d’un système de tolérance passive qui favorise l’exploitation et l’insécurité ni d’un système répressiF qui moralise et clandestinise."
+              
+        div.askforus.askforus--comment
+          section.commentaire
+            h2.commentaire__title="Commentaire"
+
+            div.commentaire__content
+              span.commentaire__subject="Bravo à vous"
+              p.commentaire__info="Daniel Tanner"
+                time.commentaire__time="Le 23 Janvier 2017"
+              p.commentaire__text="Je signe ce manifeste qui devrait être approuvé par l’UE. Si une législation européenne concernant les TDS et leurs clients(es) pouvait être mise en place, avec la participation des TDS, se rapprochant le plus possible de ce manifeste, il y aurait moins de traite des êtres humains, plus de sécurité physique et de santé pour les TDS et leurs clients(es). Malheureusement, au nom de la morale traditionnelle et/ou pour défendre les intérêts économiques des groupes organisés de la traite des êtres humains, les élus locaux et européens préfèrent maintenir l’arsenal juridique… Nous devons donc diffuser ce manifeste -comme toutes les revendications des TDS émanant des différents pays- si nous voulons faire progresser ce dossier dans le bon sens."
+
+          section.askforus__section
+            h2.askforus__title="Laisser un commentaire"
+            form.askforus__form(method="post",action="/")
+              fieldset
+                legend.hidden="Formulaire de passage"
+                div.askforus__left
+
+                  label.askforus__label(for="name")="Nom"
+                  input.askforus__input(type="text",name="nom",id="name",placeholder="Ex : Dupont ")
+                  label.askforus__label(for="email")="Email"
+                  input.askforus__input(type="email",name="email",id="email",placeholder="Ex : jean@dupont.be ")
+                  label.askforus__label(for="subject")="Sujet"
+                  input.askforus__input(type="text",name="subject",id="subject",placeholder="Ex : J'adhère complètement!")
+                div.askforus__right
+                  label.askforus__label(for="message")="Message : "
+                  textarea.askforus__input.askforus__input--textarea(name="message",id="message")
+
+                  input.askforus__submit(type="submit",value="Commenter")
 
 
         include template/_footer.pug
