--- a/www/views/template/_navigation.pug
+++ b/www/views/template/_navigation.pug
@@ -8,23 +8,23 @@ section.navigation#menu
         div.profil__box
           ul.profil__list
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Nos services"
+              a.profil__link(href="tds.html")="Nos services"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="La législation sur la prostitution"
+              a.profil__link(href="tds.html")="La législation sur la prostitution"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Infos vaccination et dépistage"
+              a.profil__link(href="tds.html")="Infos vaccination et dépistage"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Demander le passage d'une équipe"
+              a.profil__link(href="tds.html")="Demander le passage d'une équipe"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Retrouver votre code de vaccination"
+              a.profil__link(href="tds.html")="Retrouver votre code de vaccination"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Quand la capote éclate"
+              a.profil__link(href="tds.html")="Quand la capote éclate"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Fellation sans préservatif"
+              a.profil__link(href="tds.html")="Fellation sans préservatif"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Hygiène du vagin"
+              a.profil__link(href="tds.html")="Hygiène du vagin"
             li.profil__element.profil__element--tds
-              a.profil__link(href="#")="Brochure ( PDF en téléchargement)"
+              a.profil__link(href="tds.html")="Brochure ( PDF en téléchargement)"
 
       article.profil.profil--etudiants
         h3.profil__title="Étudiants"
