--- a/www/source/scss/components/_choix.scss
+++ b/www/source/scss/components/_choix.scss
@@ -77,8 +77,9 @@
    &__link{
      font: 1.6em/1.25 $sourcesanslight;
      padding:0.7em 0;
+     text-decoration: underline;
      &:hover{
-       text-decoration: underline;
+       text-decoration:none;
      }
      &--button{
        font: 1.2em/2.5 $playfair;
