--- a/www/source/scss/object/_choix.scss
+++ b/www/source/scss/object/_choix.scss
@@ -41,8 +41,11 @@
   }
 }
 
-
-
+.no-sticky .aside{
+  float: none;
+  display: block;
+  position: static;
+}
 
 @media screen and (max-width:975px) {
   .aside{
