--- a/www/source/scss/object/footer.scss
+++ b/www/source/scss/object/footer.scss
@@ -41,6 +41,9 @@
   &__list{
     width: 17.9em;
   }
+  &__span{
+    display: block;
+  }
   &__content{
     margin-bottom: 3.8em;
     margin-left: 9.5em;
