--- a/www/views/ville.pug
+++ b/www/views/ville.pug
@@ -49,6 +49,8 @@ html(lang="fr")
               li.contactInfo__element
                 span.contactInfo__subtitle.contactInfo__subtitle--email="Email : "
                 a.contactInfo__link(href="mailto:espacebxl@hotmail.com",title="Nous envoyer un email?")=" espacebxl@hotmail.com"
-            <a href="https://www.google.com/maps/dir//116,+Rue+des+plantes+1030+Bruxelles/"><img class="contactInfo__img" src="http://maps.googleapis.com/maps/api/staticmap?center=116,+Rue+des+plantes+1030+Bruxelles&zoom=13&scale=2&size=440x300&maptype=roadmap&key=AIzaSyD0FsoxEPq60TK55sKfmEDqI3Iow0RjVLI&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C116,+Rue+des+plantes+1030+Bruxelles" alt="Google Map of 116, Rue des plantes 1030 Bruxelles" width="440" height="300"></a>
+            div.contactInfo__google
+              <a href="https://www.google.com/maps/dir//116,+Rue+des+plantes+1030+Bruxelles/"class="contactInfo__image"><img class="contactInfo__img" src="http://maps.googleapis.com/maps/api/staticmap?center=116,+Rue+des+plantes+1030+Bruxelles&zoom=13&scale=2&size=440x300&maptype=roadmap&key=AIzaSyD0FsoxEPq60TK55sKfmEDqI3Iow0RjVLI&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C116,+Rue+des+plantes+1030+Bruxelles" alt="Google Map of 116, Rue des plantes 1030 Bruxelles" width="440" height="300"></a>
+              a.contactInfo__gmap(href="https://www.google.com/maps/dir//116,+Rue+des+plantes+1030+Bruxelles/")="Vers la google maps"
 
       include template/_footer.pug
