--- a/www/source/scss/components/_country.scss
+++ b/www/source/scss/components/_country.scss
@@ -69,6 +69,14 @@
        content: "\e907";
      }
    }
+   &__gmap{
+     background-color: $white;
+     color: $black;
+     font: 1.6em/3 $playfair;
+     text-transform: uppercase;
+     border: 1px solid $black;
+     text-align: center;
+   }
    &__element{
      font: 1.6em/1.25 $sourcesanslight;
     padding-bottom: 1.25em;
